add -Wshadow and -Wno-shadow flags in Makefile ex03

--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -8,7 +8,7 @@ SRCS =	main.cpp \
 
 OBJS = $(SRCS:.cpp=.o)
 
-CFLAGS = -std=c++98 -Wall -Werror -Wextra
+CFLAGS = -std=c++98 -Wall -Werror -Wextra -Wshadow -Wno-shadow
 
 RM = rm -f
 
